update: points count